apps/planka/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planka
  labels:
    gateway-access: planka
