apps/planka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka
  namespace: planka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka
  template:
    metadata:
      labels:
        app: planka
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
        - name: planka
          image: ghcr.io/plankanban/planka:2.2.1@sha256:125f45330853210c678fed1132bedc0912b4a11a27779b79802fbca108e069e2
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: /app/data
              name: planka-data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: planka-data
          persistentVolumeClaim:
            claimName: pvc
