apps/planka/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planka-route
  namespace: planka
  annotations:
    argocd.argoproj.io/sync-wave: "0"  
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway 
  hostnames:
    - "planka.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: planka
          port: 1337
